<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/cardview_light_background">
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/tvTtile"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDocument"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/etDocument"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etNickName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/etUserName"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etNames"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/etNames"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etLastNames"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/etLastNames"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:padding="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingTop="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:text="@string/btnSearch"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:text="@string/btnList"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:text="@string/btnDelete"
            android:textColor="@color/white" />
    </GridLayout>

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />
</LinearLayout>